[gd_scene load_steps=8 format=3 uid="uid://c3f18fv8sxbnh"]

[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_xh4dv"]
[ext_resource type="Script" path="res://Scripts/racial_trait_button.gd" id="2_lekwt"]
[ext_resource type="Script" path="res://Scenes/animated_button.gd" id="3_05la7"]
[ext_resource type="Texture2D" uid="uid://mcy1t5ytd43t" path="res://Assets/Lucid V1.2/SVG/Shadow/Chevron-Arrow-Up.svg" id="4_1qnqu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy0id"]
bg_color = Color(0.00392157, 0.454902, 0.745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_el6yf"]
bg_color = Color(0.00392157, 0.454902, 0.745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qbp6"]
bg_color = Color(0.00392157, 0.372549, 0.615686, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="TraitButton" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -50.0
offset_right = 277.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xh4dv")
script = ExtResource("2_lekwt")

[node name="AnimatedButton" type="Button" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_xh4dv")
theme_override_styles/normal = SubResource("StyleBoxFlat_hy0id")
theme_override_styles/hover = SubResource("StyleBoxFlat_el6yf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5qbp6")
script = ExtResource("3_05la7")

[node name="Shadow" type="Panel" parent="AnimatedButton"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="AnimatedButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="AnimatedButton/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="AnimatedButton/MarginContainer/HBoxContainer" groups=["ButtonLabel"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Text"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AnimatedButton/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_1qnqu")
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Speed" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Bonus action"
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
mouse_filter = 1
placeholder_text = "Trait Text"
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="pressed" from="AnimatedButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AnimatedButton" to="AnimatedButton" method="_on_pressed"]
[connection signal="resized" from="AnimatedButton" to="AnimatedButton" method="_on_resized"]
