[gd_scene load_steps=3 format=3 uid="uid://dovpmp4f4ubog"]

[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_djkjf"]
[ext_resource type="Script" path="res://Scenes/animated_button.gd" id="1_eav5y"]

[node name="AnimatedButton" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -43.5
offset_right = 108.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(4, 4)
mouse_filter = 1
theme = ExtResource("1_djkjf")
script = ExtResource("1_eav5y")
label_name = "text"

[node name="Shadow" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="." groups=["ButtonLabel"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 3

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
